<resources>
    <string name="app_name">EXOWiFi</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="register_account">Register Account</string>
    <string name="skip">Skip</string>
    <string name="error_email_format">Incorrect email format.</string>
    <string name="error_password_format">Incorrect password formart.</string>
    <string name="error_login_failure">Login failed.</string>
    <string name="signup">Sign Up</string>
    <string name="nickname">Nickname</string>
    <string name="error_nickname_empty">Nickname empty.</string>
    <string name="error_unknown">Unkown error.</string>
    <string name="error_request">Request error,please try again later.</string>
    <string name="error_corp_not_exist">Corparation does not exist.</string>
    <string name="error_phone_exist">Phone number has been registered.</string>
    <string name="error_email_exist">Email has been registered.</string>
    <string name="regiser_success">Register success.</string>
    <string name="device">Device</string>
    <string name="user">User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="ssid">Ssid</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="add">Add</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="sunrise">Sunrise</string>
    <string name="day_light">Daylight</string>
    <string name="sunset">Sunset</string>
    <string name="turnoff">Turnoff</string>
    <string name="night">Night</string>
    <string name="disabled">Disabled</string>
    <string name="export">Export</string>
    <string name="save">Save</string>
    <string name="preview">Preview</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="end">End</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="previous">Prev</string>
    <string name="set_points_count">Set points count</string>
    <string name="ok">OK</string>
    <string name="title_activity_single_socket">SingleSocketActivity</string>
    <string name="current_temp">Current temp</string>
    <string name="turnon_temp">Turnon temperature</string>
    <string name="no_sensor_detected">No sensor detected</string>
    <string name="week_sun">Su</string>
    <string name="week_mon">Mo</string>
    <string name="week_tue">Tu</string>
    <string name="week_wed">We</string>
    <string name="week_thu">Th</string>
    <string name="week_fri">Fr</string>
    <string name="week_sat">Sa</string>
    <string name="one_time">Once</string>
    <string name="turnon">Turnon</string>
    <string name="title_set_timer">Set timer</string>
    <string name="delete_timer">Detele timer</string>
    <string name="night_mode">Night mode</string>
    <string name="linkage_enable">Linkage</string>
    <string name="notify_enable">Notify</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="colon">:</string>
    <string name="to">to</string>
    <string name="turnon_temp_in_day">Turnon temperature in day</string>
    <string name="turnon_temp_in_night">Turnon temperature in night</string>
    <string name="linkage_disabled">Linkage disabled</string>
    <string name="set_linkage_args">Set linkage</string>
</resources>
