<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_alarm_white_32dp"
            android:background="@color/colorTransparent"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TimePicker
            android:id="@+id/dialog_tp_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:timePickerMode="spinner"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_socket_white_32dp"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <RadioGroup
            android:id="@+id/dialog_rg_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:checkedButton="@id/dialog_rb_turnoff">
            <RadioButton
                android:id="@+id/dialog_rb_turnoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/turnoff"/>
            <RadioButton
                android:id="@+id/dialog_rb_turnon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/turnon"/>
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_date_white_32dp"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <CheckBox
            android:id="@+id/dialog_ctv_sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:button="@null"
            android:textColor="@color/selector_week"
            android:text="@string/week_sun"/>
        <CheckBox
            android:id="@+id/dialog_ctv_mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:button="@null"
            android:textColor="@color/selector_week"
            android:text="@string/week_mon"/>
        <CheckBox
            android:id="@+id/dialog_ctv_tue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:button="@null"
            android:textColor="@color/selector_week"
            android:text="@string/week_tue"/>
        <CheckBox
            android:id="@+id/dialog_ctv_wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:button="@null"
            android:textColor="@color/selector_week"
            android:text="@string/week_wed"/>
        <CheckBox
            android:id="@+id/dialog_ctv_thu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:button="@null"
            android:textColor="@color/selector_week"
            android:text="@string/week_thu"/>
        <CheckBox
            android:id="@+id/dialog_ctv_fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:button="@null"
            android:textColor="@color/selector_week"
            android:text="@string/week_fri"/>
        <CheckBox
            android:id="@+id/dialog_ctv_sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:button="@null"
            android:textColor="@color/selector_week"
            android:text="@string/week_sat"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"/>

    <Switch
        android:id="@+id/dialog_sw_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:checked="true"/>

</LinearLayout>